Controlled that problems cant be answered out of date

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,7 +69,7 @@ LP_table_button_delete=Delete
 
 
 ##ListAnswer
-LA_title=List Answers
+LA_title=Answers List
 LA_subtitle=View the answers of the students on the table
 ##ListAnswer Modal
 LA_modal_answer=Steps
@@ -124,7 +124,7 @@ SH_text=Please, choose on the topnav to solve a problem from the list or to view
 
 
 ##StudentListAnswer
-SLA_title=List Answers
+SLA_title=Answers List
 SLA_subtitle=View your answers on the table
 ##ListAnswer Modal
 SLA_modal_answer=Steps
@@ -152,7 +152,7 @@ SSP_method=Method:
 SSP_multianswer=Multianswer:
 SSP_equations=Equations:
 SSP_numvariables=Number of Variables:
-SSP_insert_solution=Introduzca la solución:
+SSP_insert_solution=Insert the solution:
 SSP_button_create=Send
 SSP_variableX=X:
 SSP_variableY=Y:
@@ -161,25 +161,60 @@ SSP_elements=Insert your steps with the next options:
 SSP_validation_required=Field required
 SSP_validation_lenght=There cannot be more than 30 characters
 SSP_validation_character=You have entered an invalid character
+##Combos
+SSP_matrices=Matrices
+SSP_1x2=1x2
+SSP_1x3=1x3
+SSP_1x4=1x4
+SSP_2x1=2x1
+SSP_2x2=2x2
+SSP_2x3=2x3
+SSP_2x4=2x4
+SSP_3x1=3x1
+SSP_3x2=3x2
+SSP_3x3=3x3
+SSP_3x4=3x4
+SSP_formulas=Equations
+SSP_1_formula=1 equation
+SSP_2_formula=2 equations
+SSP_3_formula=3 equations
+SSP_resta_formula=Subtract 2 equations
+SSP_suma_formula=Add 2 equations
+SSP_placeholder_formula=Insert the equation
+SSP_placeholder_X=Value of X
+SSP_placeholder_Y=Value of Y
+SSP_placeholder_Z=Value of Z
 
 
 ##StudentProblemSolved
 SPS_title=Answer Saved
 SPS_subtitle=Your answer has been successfully saved
-SPS_text=You can view your answer choosing List Answers in the topnav
+SPS_text=You can view your answer choosing Answers List in the topnav
 
 
 ##Commons
 Toggle_Navigation=Toggle navigation
 Home=Home
 
+
 #ErrorStudent
 ES_title=Error
 ES_subtitle=There has been an error
 
+
+#ErrorFatal
+EF_title=Error
+EF_subtitle=There has been an error
+EF_text=Please, report this error to the administrator
+
+
+#Error404
+E404_title=Error 404
+E404_subtitle=The page you requested have not been found
+
 ###################################################################
 ###################     HANDLING EXCEPTIONS     ###################
 ###################################################################
-EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again
-
-
+EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again and if the error persist report it to the administrator
+EX_idproblem_already_solved=The problem can only been answered one time and you have already done it
+EX_idproblem_out_date=The problem you are trying to solve does not allow to be answered on this date
