--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -69,7 +69,7 @@ LP_table_button_delete=Delete
 
 
 ##ListAnswer
-LA_title=List Answers
+LA_title=Answers List
 LA_subtitle=View the answers of the students on the table
 ##ListAnswer Modal
 LA_modal_answer=Steps
@@ -124,7 +124,7 @@ SH_text=Please, choose on the topnav to solve a problem from the list or to view
 
 
 ##StudentListAnswer
-SLA_title=List Answers
+SLA_title=Answers List
 SLA_subtitle=View your answers on the table
 ##ListAnswer Modal
 SLA_modal_answer=Steps
@@ -189,7 +189,7 @@ SSP_placeholder_Z=Value of Z
 ##StudentProblemSolved
 SPS_title=Answer Saved
 SPS_subtitle=Your answer has been successfully saved
-SPS_text=You can view your answer choosing List Answers in the topnav
+SPS_text=You can view your answer choosing Answers List in the topnav
 
 
 ##Commons
@@ -217,4 +217,4 @@ E404_subtitle=The page you requested have not been found
 ###################################################################
 EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again and if the error persist report it to the administrator
 EX_idproblem_already_solved=The problem can only been answered one time and you have already done it
-
+EX_idproblem_out_date=The problem you are trying to solve does not allow to be answered on this date
