--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -217,5 +217,4 @@ E404_subtitle=No se ha encontrado la página que ha solicitado
 ###################################################################
 EX_idproblem_cast=No se ha recuperado correctamente el problema a resolver, por favor, vuelva a intentarlo y si el error persiste comuníqueselo al administrador
 EX_idproblem_already_solved=El problema sólo permite enviar la respuesta una vez y usted ya lo ha hecho anteriormente
-
-
+EX_idproblem_out_date=El problema que está intentando resolver no permite que lo resuelva en esta fecha
