--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -51,7 +51,7 @@ LP_subtitle=Vea o borre los problemas de la tabla
 LP_modal_equation=Ecuaciones de 
 LP_modal_solution=Solución de 
 LP_modal_delete=Borrar Problema
-LP_modal_message=Si borra el problema también borrara las respuestas de los alumnos. ¿Está seguro de que desea borrar el problema?
+LP_modal_message=Si borra el problema también borrará las respuestas de los alumnos. ¿Está seguro de que desea borrar el problema?
 LP_modal_button_close=Cerrar
 LP_modal_button_delete=Borrar
 ###ProblemsList Table
